# AgenticEngineeringDigest

./: .gitignore  pyproject.toml
.claude/: settings.local.json
.claude/commands/: digest.md
.github/workflows/: digest.yml
config/: sources.json
output/: digest-2026-04-09-1122.html  digest-2026-04-09-1122.md  digest-2026-04-09-1746.html  digest-2026-04-09-1746.md  digest-2026-04-09-1755.html  digest-2026-04-09-1755.md  digest-2026-04-09-1829.html  digest-2026-04-09-1829.md  digest-2026-04-09-1914.html  digest-2026-04-09-1914.md  digest-2026-04-10-0513.html  digest-2026-04-10-0513.md  digest-2026-04-10-0556.html  digest-2026-04-10-0556.md  digest-2026-04-10-0701.html  digest-2026-04-10-0701.md  digest-2026-04-10-0749.html  digest-2026-04-10-0749.md  digest-2026-04-13-0908.html  digest-2026-04-13-0908.md  digest-2026-04-20-0917.html  digest-2026-04-20-0917.md  digest-2026-04-27-0928.html  digest-2026-04-27-0928.md  digest-2026-05-04-0930.html  digest-2026-05-04-0930.md  digest-2026-05-11-1044.html  digest-2026-05-11-1044.md  digest-2026-05-18-1112.html  digest-2026-05-18-1112.md  digest-2026-05-25-1116.html  digest-2026-05-25-1116.md  digest-2026-06-01-1248.html  digest-2026-06-01-1248.md  digest-2026-06-08-1206.html  digest-2026-06-08-1206.md  digest-2026-06-15-1325.html  digest-2026-06-15-1325.md  digest-2026-06-22-1304.html  digest-2026-06-22-1304.md  (+8 more)
src/: digest.py  emailer.py  main.py  storage.py
src/scrapers/: __init__.py  base.py  rss.py  web.py
templates/: digest.html  digest_email.html
