[project]
name = "agentic-engineers-digest"
version = "0.1.0"
description = "Periodic digest of agentic AI news from curated sources"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "jinja2>=3.1",
    "rich>=13.0",
    "click>=8.1",
]

[project.scripts]
digest = "src.main:cli"
